setion done gird

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </div>
             </div>
                 <div class="buttons-header">
-                    <button>nwe</button>
+                    <button>new</button>
                     <button>Upload</button>
                     <button>Share</button>
                 </div>
