--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     </nav>
 
     <div class="section-grid">
-      <section>
+      <section class="section-grid" >
         <div class="container-section">
           <h1>Your Project</h1>
 
@@ -117,7 +117,7 @@
 
               <h2>tex</h2>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Lorem ipsum dolor sit amet consectetur adipisicing eit.
                 Consequatur, quis!
               </p>
             </div>
