--- a/index.html
+++ b/index.html
@@ -137,6 +137,166 @@
             <!--end of the div icons -->
           </div>
           <!--end of the card-->
+          <div class="card">
+            <div class="color-block"></div>
+            <div>
+              <h2>tex</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing eit.
+                Consequatur, quis!
+              </p>
+            </div>
+            <div class="icons">
+              <span
+                style="color: black; margin-right: 10px"
+                class="material-symbols-outlined"
+              >
+                star
+              </span>
+              <span
+                style="color: black; margin-right: 10px"
+                class="material-symbols-outlined"
+              >
+                visibility
+              </span>
+              <span
+                style="color: black; margin-right: 10px"
+                class="material-symbols-outlined"
+              >
+                jump_to_element
+              </span>
+            </div>
+            <!--end of the div icons -->
+          </div>
+          <!--end of the card-->
+          <div class="card">
+            <div class="color-block"></div>
+            <div>
+              <h2>tex</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing eit.
+                Consequatur, quis!
+              </p>
+            </div>
+            <div class="icons">
+              <span
+                style="color: black; margin-right: 10px"
+                class="material-symbols-outlined"
+              >
+                star
+              </span>
+              <span
+                style="color: black; margin-right: 10px"
+                class="material-symbols-outlined"
+              >
+                visibility
+              </span>
+              <span
+                style="color: black; margin-right: 10px"
+                class="material-symbols-outlined"
+              >
+                jump_to_element
+              </span>
+            </div>
+            <!--end of the div icons -->
+          </div>
+          <!--end of the card-->
+          <div class="card">
+            <div class="color-block"></div>
+            <div>
+              <h2>tex</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing eit.
+                Consequatur, quis!
+              </p>
+            </div>
+            <div class="icons">
+              <span
+                style="color: black; margin-right: 10px"
+                class="material-symbols-outlined"
+              >
+                star
+              </span>
+              <span
+                style="color: black; margin-right: 10px"
+                class="material-symbols-outlined"
+              >
+                visibility
+              </span>
+              <span
+                style="color: black; margin-right: 10px"
+                class="material-symbols-outlined"
+              >
+                jump_to_element
+              </span>
+            </div>
+            <!--end of the div icons -->
+          </div>
+          <!--end of the card-->
+          <div class="card">
+            <div class="color-block"></div>
+            <div>
+              <h2>tex</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing eit.
+                Consequatur, quis!
+              </p>
+            </div>
+            <div class="icons">
+              <span
+                style="color: black; margin-right: 10px"
+                class="material-symbols-outlined"
+              >
+                star
+              </span>
+              <span
+                style="color: black; margin-right: 10px"
+                class="material-symbols-outlined"
+              >
+                visibility
+              </span>
+              <span
+                style="color: black; margin-right: 10px"
+                class="material-symbols-outlined"
+              >
+                jump_to_element
+              </span>
+            </div>
+            <!--end of the div icons -->
+          </div>
+          <!--end of the card-->
+          <div class="card">
+            <div class="color-block"></div>
+            <div>
+              <h2>tex</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing eit.
+                Consequatur, quis!
+              </p>
+            </div>
+            <div class="icons">
+              <span
+                style="color: black; margin-right: 10px"
+                class="material-symbols-outlined"
+              >
+                star
+              </span>
+              <span
+                style="color: black; margin-right: 10px"
+                class="material-symbols-outlined"
+              >
+                visibility
+              </span>
+              <span
+                style="color: black; margin-right: 10px"
+                class="material-symbols-outlined"
+              >
+                jump_to_element
+              </span>
+            </div>
+            <!--end of the div icons -->
+          </div>
+          <!--end of the card-->
         </div>
       </section>
 
